[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Ball.gd" type="Script" id=1]
[ext_resource path="res://sprites/ball.png" type="Texture" id=2]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 5.0

[sub_resource type="ParticlesMaterial" id=3]
emission_shape = 1
emission_sphere_radius = 10.0
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 1.0
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Ball" type="RigidBody2D"]
collision_layer = 2
collision_mask = 5
physics_material_override = SubResource( 1 )
gravity_scale = 0.0
contacts_reported = 1000
contact_monitor = true
linear_damp = 0.0
angular_damp = 1.0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Particles2D" type="Particles2D" parent="."]
z_index = -1
emitting = false
amount = 50
lifetime = 2.0
one_shot = true
speed_scale = 8.0
process_material = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Ball_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Ball_body_exited"]
